--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [
     { include = "src", from = "." }
 ]
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.10"
 langchain = "0.3.0"
 langchain-openai = "0.2.11"
 langgraph = "0.2.56"
@@ -16,6 +16,7 @@ pandas = "^2.1.0"
 numpy = "^1.24.0"
 python-dotenv = "1.0.0"
 matplotlib = "^3.9.2"
+gradio = "^5.9.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
