--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pandas = "^2.1.0"
 numpy = "^1.24.0"
 python-dotenv = "1.0.0"
 matplotlib = "^3.9.2"
+yfinance = "^0.2.51"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
