--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 OPENAI_API_KEY=your_openai_api_key_here
 FINANCIAL_DATASETS_API_KEY=your_financial_datasets_api_key_here
+OPENAI_MODEL="gpt-4o" # Specify which OpenAI model to use. Examples: gpt-4, gpt-4o, gpt-3.5-turbo-0125 https://openai.com/api/pricing/
