Add support for OpenAI compatible API

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
-# Get your OpenAI API key from https://platform.openai.com/
 OPENAI_API_KEY=your-openai-api-key
+# Get your OpenAI API key from https://platform.openai.com/ or compatible api
+OPENAI=false #true = OpenAI - false = Compatible OpenAI API provider
+OPENAI_API_KEY=your-openai-api-key
+OPENAI_API_BASE=provider-url #ex: https://api.regolo.ai/v1
+MODEL_NAME=model_name #optional ex: meta-llama/Llama-3.3-70B-Instruct
 
 # Get your Financial Datasets API key from https://financialdatasets.ai/
 FINANCIAL_DATASETS_API_KEY=your-financial-datasets-api-key
