--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 # Get your OpenAI API key from https://platform.openai.com/
 OPENAI_API_KEY=your-openai-api-key
 
+# Get your Groq API key from https://console.groq.com/
+GROQ_API_KEY=your-groq-api-key
+
 # Get your Financial Datasets API key from https://financialdatasets.ai/
 FINANCIAL_DATASETS_API_KEY=your-financial-datasets-api-key
