feat: add LangsSmith API key configuration to .env.example and update README

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
+# Get your LangsSmith API key from https://smith.langchain.com/settings
+LANGCHAIN_API_KEY=your-langsmith-api-key
+LANGCHAIN_TRACING_V2=true
+LANGCHAIN_ENDPOINT="https://api.smith.langchain.com"
+LANGCHAIN_PROJECT="ai-hedge-fund"
+
 # Get your OpenAI API key from https://platform.openai.com/
 OPENAI_API_KEY=your-openai-api-key
 
