--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ OPENAI_API_KEY=your-openai-api-key
 
 # Get your Financial Datasets API key from https://financialdatasets.ai/
 FINANCIAL_DATASETS_API_KEY=your-financial-datasets-api-key
+
+# Get your CoinGecko API key from https://www.coingecko.com/api/pricing
+COINGECKO_API_KEY=
