--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ matplotlib = "^3.9.2"
 tabulate = "^0.9.0"
 colorama = "^0.4.6"
 questionary = "^2.1.0"
+pycoingecko = "^3.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
