--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ tabulate = "^0.9.0"
 colorama = "^0.4.6"
 langchain-groq = "*"
 questionary = "^2.1.0"
+rich = "^13.9.4"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
