--- a/.github/workflows/trading-bot.yml
+++ b/.github/workflows/trading-bot.yml
@@ -33,7 +33,7 @@ jobs:
         run: poetry install --no-interaction --no-root
 
       - name: Run Trading Bot
-        run: poetry run python src/main.py --ticker AAPL
+        run: echo -e "a\n" | poetry run python src/main.py --ticker AAPL
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           FINANCIAL_DATASETS_API_KEY: ${{ secrets.FINANCIAL_DATASETS_API_KEY }}
