feat: add Anthropic Claude support and implement valuation safety checks across agents

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
+# openai or anthropic
+LLM_PROVIDER=openai
+
 # Get your OpenAI API key from https://platform.openai.com/
-OPENAI_API_KEY=your-openai-api-key
+OPENAI_API_KEY=your-openai-key-here
+OPENAI_MODEL=gpt-4  # or gpt-4-turbo-preview, gpt-3.5-turbo, etc.
+
+# Get your Anthropic API key from https://console.anthropic.com/settings/keys
+ANTHROPIC_API_KEY=your-anthropic-key-here
+ANTHROPIC_MODEL=claude-3-sonnet-20240307  # or claude-3-opus-20240229, etc.
 
 # Get your Financial Datasets API key from https://financialdatasets.ai/
 FINANCIAL_DATASETS_API_KEY=your-financial-datasets-api-key
