--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ ANTHROPIC_API_KEY=your-anthropic-api-key
 # For getting financial data to power the hedge fund
 # Get your Financial Datasets API key from https://financialdatasets.ai/
 FINANCIAL_DATASETS_API_KEY=your-financial-datasets-api-key
+
+# For running LLMs hosted by ollama api
+OLLAMA_HOST='http://localhost:11434'
