--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,6 @@ ANTHROPIC_API_KEY=your-anthropic-api-key
 # Get your Financial Datasets API key from https://financialdatasets.ai/
 FINANCIAL_DATASETS_API_KEY=your-financial-datasets-api-key
 
-# For running LLMs hosted by ollama api
-OLLAMA_HOST='http://localhost:11434'
+# For running LLMs hosted by your private ollama api
+# Install your ollama service from https://ollama.com/
+OLLAMA_HOST='http://example.com:11434'
