--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [
     { include = "src", from = "." }
 ]
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.11"
 langchain = "0.3.0"
 langchain-anthropic = "0.3.5"
 langchain-groq = "0.2.3"
@@ -22,6 +22,8 @@ tabulate = "^0.9.0"
 colorama = "^0.4.6"
 questionary = "^2.1.0"
 rich = "^13.9.4"
+langchain-ollama = "^0.2.3"
+pydantic = "^2.6.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
