--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ python = "^3.9"
 langchain = "0.3.0"
 langchain-openai = "0.3"
 langchain-ollama = "0.2.0"
-langchain-core = "0.1.10"
+langchain-groq = "0.2.0"
 langgraph = "0.2.56"
 pandas = "^2.1.0"
 numpy = "^1.24.0"
