- Added ollama functionality with the model huihui_ai/qwen2.5-1m-abliterated:14b.
- Added stuff into pyproject.toml, models.py, llm.py, and .env.example related to it.

- Need to test that this works from a fresh clone/fresh machine for PR purposes, but it's a cheaper way to test stuff out than my Anthropic key!

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,7 @@ FINANCIAL_DATASETS_API_KEY=your-financial-datasets-api-key
 # For running LLMs hosted by openai (gpt-4o, gpt-4o-mini, etc.)
 # Get your OpenAI API key from https://platform.openai.com/
 OPENAI_API_KEY=your-openai-api-key
+
+# For running LLMs locally via OLLAMA
+# No API key needed, just install OLLAMA from https://ollama.ai/
+OLLAMA_BASE_URL=http://localhost:11434  # Optional, defaults to this
