--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ colorama = "^0.4.6"
 questionary = "^2.1.0"
 rich = "^13.9.4"
 langchain-google-genai = "^2.0.11"
+langchain-ollama = "^0.2.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
