- Updates to readme and .env.example regarding Ollama stuff I added

--- a/.env.example
+++ b/.env.example
@@ -21,4 +21,4 @@ OPENAI_API_KEY=your-openai-api-key
 
 # For running LLMs locally via OLLAMA
 # No API key needed, just install OLLAMA from https://ollama.ai/
-OLLAMA_BASE_URL=http://localhost:11434  # Optional, defaults to this
+OLLAMA_BASE_URL=http://localhost:11434  # Optional, defaults to this, this value doesn't actually work yet, you'll have to call it within models.py for that. Coming soon!
