- Added ability to connect to alpaca portfolio and execute trades. Very fun!
- Dramatically overhauled portfolio manager to handle repeated runs on the same portfolio. Now it's fed prior transaction history and has overtrading protection rules. Definitely still needs more testing, though.

- Code to accomodate alpaca is in backtester but I haven't tested it much. Likely needs attention.

- Updated readme a bit.

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,8 @@ OPENAI_API_KEY=your-openai-api-key
 # For running LLMs locally via OLLAMA
 # No API key needed, just install OLLAMA from https://ollama.ai/
 OLLAMA_BASE_URL=http://localhost:11434  # Optional, defaults to this, this value doesn't actually work yet, you'll have to call it within models.py for that. Coming soon!
+
+# Alpaca Markets API credentials
+ALPACA_API_KEY=your-alpaca-api-key
+ALPACA_API_SECRET=your-alpaca-api-secret
+ALPACA_PAPER_TRADING=true  # Set to false for live trading
