--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ questionary = "^2.1.0"
 rich = "^13.9.4"
 langchain-google-genai = "^2.0.11"
 langchain-ollama = "^0.2.3"
+alpaca-py = "^0.39.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
