--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,8 @@ FINANCIAL_DATASETS_API_KEY=your-financial-datasets-api-key
 # For running LLMs hosted by openai (gpt-4o, gpt-4o-mini, etc.)
 # Get your OpenAI API key from https://platform.openai.com/
 OPENAI_API_KEY=your-openai-api-key
+# For running LLMs hosted by Ollama (llama3, mistral, yi, mixtral, etc.)
+# Base URL for your Ollama instance, defaults to http://localhost:11434
+OLLAMA_BASE_URL=http://localhost:11434
+# Default Ollama model to use if none is specified, 70b is recommended
+OLLAMA_DEFAULT_MODEL=llama3.3:70b
