--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ isort = "^5.12.0"
 flake8 = "^6.1.0"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.2.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.black]
