--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,12 @@ packages = [
 ]
 [tool.poetry.dependencies]
 python = "^3.9"
-langchain = "0.3.0"
+langchain = "^0.3.23"
 langchain-anthropic = "0.3.5"
 langchain-groq = "0.2.3"
 langchain-openai = "^0.3.5"
 langchain-deepseek = "^0.1.2"
+langchain-community = "^0.3.20"
 langgraph = "0.2.56"
 pandas = "^2.1.0"
 numpy = "^1.24.0"
