--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,16 +8,17 @@ packages = [
     { include = "src", from = "." }
 ]
 [tool.poetry.dependencies]
-python = "^3.9"
-langchain = "0.3.0"
+python = "^3.12"
+langchain = "^0.3.0"
 langchain-anthropic = "0.3.5"
 langchain-groq = "0.2.3"
 langchain-openai = "^0.3.5"
 langchain-deepseek = "^0.1.2"
 langchain-ollama = "^0.2.0"
 langgraph = "0.2.56"
+langchain-community = "^0.3.22"
 pandas = "^2.1.0"
-numpy = "^1.24.0"
+numpy = "^2.1.0"
 python-dotenv = "1.0.0"
 matplotlib = "^3.9.2"
 tabulate = "^0.9.0"
@@ -38,5 +39,5 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 line-length = 420
-target-version = ['py39']
+target-version = ['py312']
 include = '\.pyi?$'
