--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,10 @@ langchain = "0.3.0"
 langchain-anthropic = "0.3.5"
 langchain-groq = "0.2.3"
 langchain-openai = "^0.3.5"
+openai = "^1.0.0"
 langchain-deepseek = "^0.1.2"
 langchain-ollama = "^0.2.0"
+
 langgraph = "0.2.56"
 pandas = "^2.1.0"
 numpy = "^1.24.0"
