--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,8 @@ GROQ_API_KEY=your-groq-api-key
 # Get your Google API key from https://console.cloud.google.com/
 GOOGLE_API_KEY=your-google-api-key
 # For getting financial data to power the hedge fund
-# Get your Financial Datasets API key from https://financialdatasets.ai/
-FINANCIAL_DATASETS_API_KEY=your-financial-datasets-api-key
+# Get your Polygon.io API key from https://polygon.io/
+POLYGON_API_KEY=your-polygon-api-key
 # For running LLMs hosted by openai (gpt-4o, gpt-4o-mini, etc.)
 # Get your OpenAI API key from https://platform.openai.com/
 OPENAI_API_KEY=your-openai-api-key
