--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,13 @@ pydantic = "^2.4.2"
 httpx = "^0.27.0"
 sqlalchemy = "^2.0.22"
 alembic = "^1.12.0"
+# Trading dependencies
+requests = "^2.31.0"
+ta-lib = "^0.4.28"
+tinkoff-investments = "^0.2.0b58"
+pandas-ta = "^0.3.14b"
+yfinance = "^0.2.36"
+moexalgo = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
