--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "dompurify": "^3.2.6",
     "lucide-react": "^0.507.0",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
@@ -31,6 +32,7 @@
   "license": "MIT",
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
+    "@types/dompurify": "^3.2.0",
     "@types/node": "^22.15.3",
     "@types/react": "^18.2.53",
     "@types/react-dom": "^18.2.18",
