fix: added missing ALPACA env vars

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,8 @@ FINANCIAL_DATASETS_API_KEY=your-financial-datasets-api-key
 # For running LLMs hosted by openai (gpt-4o, gpt-4o-mini, etc.)
 # Get your OpenAI API key from https://platform.openai.com/
 OPENAI_API_KEY=your-openai-api-key
+
+# Alpaca (required)
+ALPACA_API_KEY=your-alpaca-api-key
+ALPACA_SECRET_KEY=your-alpaca-secret-key
+ALPACA_PAPER=true  # Set to false for live trading
