add Tencent Hunyuan LLM support

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,7 @@ GIGACHAT_API_KEY=your-gigachat-api-key
 
 # For running LLMs hosted by OpenRouter
 OPENROUTER_API_KEY=your-openrouter-api-key
+
+# For running LLMs hosted by tencent (hunyuan-large, hunyuan-turbos, hunyuan-t1, etc.)
+# Get your Hunyuan OpenAI compatible API key from https://cloud.tencent.com
+HUNYUAN_API_KEY=your-hunyuan-api-key
