--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 # Get your Financial Datasets API key from https://financialdatasets.ai/
 FINANCIAL_DATASETS_API_KEY=your-financial-datasets-api-key
 
+#Get Alph Vantage API key from https://www.alphavantage.co/support/#api-key
+ALPHA_VANTAGE_API_KEY=your-alpha-vantage-api-key
+ALPHAVANTAGE_API_KEY=your-alphavantage-api-key
+
 # For running LLMs hosted by openai (GPT 5, etc.)
 # Get your OpenAI API key from https://platform.openai.com/
 OPENAI_API_KEY=your-openai-api-key
