--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,7 @@ OPENROUTER_API_KEY=your-openrouter-api-key
 AZURE_OPENAI_API_KEY=your-azure-openai-api-key
 AZURE_OPENAI_ENDPOINT=your-azure-openai-endpoint
 AZURE_OPENAI_DEPLOYMENT_NAME=your-azure-openai-deployment-name
+
+# For running LLMs hosted by Mistral
+# Get your Mistral API key from https://console.mistral.ai/api-keys
+MISTRAL_API_KEY=your-mistral-api-key
