--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -19,4 +19,29 @@ RUN poetry config virtualenvs.create false \
 COPY . /app/
 
 # Default command (will be overridden by Docker Compose)
+
+# Create non-root user for security
+RUN groupadd -r appuser && useradd -r -g appuser -u 1001 appuser
+
+# Change ownership of app directory to appuser
+RUN chown -R appuser:appuser /app
+
+# Switch to non-root user
+USER appuser
+
 CMD ["python", "src/main.py"] 
+
+# Create non-root user for security
+RUN groupadd -r appuser && useradd -r -g appuser -u 1001 appuser
+
+# Change ownership of app directory to appuser
+RUN chown -R appuser:appuser /app
+
+# Switch to non-root user
+
+# Create a non-root user for security
+RUN useradd -r -u 1001 -g root -s /bin/bash appuser
+
+# Switch to non-root user
+USER appuser
+USER appuser
